Align correctly with some colors and top margin the little description under "Contact Us" heading

--- a/Front-End/styles.css
+++ b/Front-End/styles.css
@@ -7,3 +7,10 @@
 h3, h2, p {
     font-family: "Open Sans";
 }
+
+.description {
+    display: flex;
+    justify-content: center;
+    margin-top: -25px;
+    color: gray;
+}
